# RAG_project

./: DELIVERY_SUMMARY.md  FILE_INDEX.md  IMPLEMENTATION_GUIDE.md  README (1).md  SETUP_VSCODE.md  START_HERE.md  gitignore  pyproject.toml  requirements (6).txt  setup.sh
local-rag-pdf-qa/: .gitignore  README.md  SETUP_VSCODE.md  pyproject.toml  requirements.txt  setup.py
local-rag-pdf-qa/.github/workflows/: ci.yml  tests.yml
local-rag-pdf-qa/config/: .env.example  config.json
local-rag-pdf-qa/src/: __init__.py  config.py  embeddings.py  llm_interface.py  pdf_processor.py  rag_pipeline.py  utils.py  vector_store.py
local-rag-pdf-qa/tests/: __init__.py  test_embeddings.py  test_pdf_processor.py  test_vector_store.py
local-rag-pdf-qa/ui/: streamlit_app.py
